# concrexit-facedetection-lambda

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
terraform/lambda/: main.tf  outputs.tf  variables.tf
terraform/stages/production/: .terraform.lock.hcl  main.tf  variables.tf
terraform/stages/staging/: main.tf  outputs.tf
